--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ a:hover { color: #008000; border-bottom: 0px solid white; }
 </style>
 </head>
 <body>
-<div class="logo"><a href="index.html"><img src="white_text.png" alt="pickleDB logo"></a></div>
+<div class="logo"><a href="index.html"><img src="white_text.png" alt="Burtle Logo"></a></div>
 <div class="body">
 <h1>Current Commands</h1>
 <p><code><span class="c2">LOAD</span> <span class="c9">path</span> <span class="c9">auto_dump</span></code> &rarr; Load a database from a path with auto_dump enabled or not <small><em>(available since 0.1)</em></small></p>
