--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ span.c2 { color: #8F5902 }
 span.c9 { color: #4E9A06 }
 a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #008000; border-bottom: 0px solid white; }
+  
+img {
+  max-width:50%;
+}
 </style>
 </head>
 <body>
