--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<link rel="shortcut icon" href="http://packages.python.org/pickleDB/favicon.ico" type="image/x-icon">
-<link rel="icon" href="http://packages.python.org/pickleDB/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="fav.ico" type="image/x-icon">
+<link rel="icon" href="fav.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>pickleDB - simple key-value database</title>
+<title>Burtle - A Better Turtle</title>
 <style type="text/css">
 .logo { width: 800px; margin: 40px auto; }
 .body { font-family: "helvetica"; width: 540px; margin: 40px auto; }
@@ -17,10 +17,17 @@ a:hover { color: #008000; border-bottom: 0px solid white; }
 img {
   max-width:50%;
 }
+ 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 </style>
 </head>
 <body>
-<div class="logo"><a href="index.html"><img src="white_text.png" alt="Burtle Logo"></a></div>
+<div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo" class="center"></a></div>
 <div class="body">
 <h1>Current Commands</h1>
 <p><code><span class="c2">LOAD</span> <span class="c9">path</span> <span class="c9">auto_dump</span></code> &rarr; Load a database from a path with auto_dump enabled or not <small><em>(available since 0.1)</em></small></p>
