--- a/index.html
+++ b/index.html
@@ -29,41 +29,21 @@ img {
 <body>
 <div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo" class="center"></a></div>
 <div class="body">
-<h1>Current Commands</h1>
-<p><code><span class="c2">LOAD</span> <span class="c9">path</span> <span class="c9">auto_dump</span></code> &rarr; Load a database from a path with auto_dump enabled or not <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">SET</span> <span class="c9">key</span> <span class="c9">value</span></code> &rarr; Set the value of a <em>str</em> key <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">GET</span> <span class="c9">key</span></code> &rarr; Get the value of a key <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">GETALL</span></code> &rarr; Return a list of all keys in database <small><em>(available since 0.4)</em></small></p>
-<p><code><span class="c2">REM</span> <span class="c9">key</span></code> &rarr; Delete a key <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">APPEND</span> <span class="c9">key</span> <span class="c9">more</span></code> &rarr; Add more to a key's value <small><em>(available since 0.1.3)</em></small></p>
-<p><code><span class="c2">EXISTS</span> <span class="c9">key</span></code> &rarr; Determine if a key exists <small><em>(available since 0.7.2)</em></small></p>
-<p><code><span class="c2">TOTALKEYS</span> <span class="c9">name</span></code> &rarr; Get the total number of keys in whole database or in a specified (<code>name</code>) dict or list <small><em>(available since 0.7.3)</em></small></p>
-<p><code><span class="c2">LCREATE</span> <span class="c9">name</span></code> &rarr; Create a list with <em>str</em> name <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LADD</span> <span class="c9">name</span> <span class="c9">value</span></code> &rarr; Add a value to a list <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LGETALL</span> <span class="c9">name</span></code> &rarr; Return all values in a list <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LEXTEND</span> <span class="c9">name</span> <span class="c9">seq</span></code> &rarr; Extend a list with a sequence <small><em>(available since 0.6)</em></small></p>
-<p><code><span class="c2">LGET</span> <span class="c9">name</span> <span class="c9">pos</span></code> &rarr; Return one value in a list <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LRANGE</span> <span class="c9">name</span> <span class="c9">start</span> <span class="c9">end</span></code> &rarr; Return all the values from a given range in a list <small><em></em></small></p>
-<p><code><span class="c2">LREMLIST</span> <span class="c9">name</span></code> &rarr; Remove a list and all of its values <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LREMVALUE</span> <span class="c9">name</span> <span class="c9">value</span></code> &rarr; Remove a value from list <code>name</code> <small><em>(available since 0.8.2)</em></small></p>
-<p><code><span class="c2">LPOP</span> <span class="c9">name</span> <span class="c9">pos</span></code> &rarr; Remove one value in a list <small><em>(available since 0.1)</em></small></p>
-<p><code><span class="c2">LLEN</span> <span class="c9">name</span></code> &rarr; Return the length of a list <small><em>(available since 0.6)</em></small></p>
-<p><code><span class="c2">LAPPEND</span> <span class="c9">name</span> <span class="c9">pos</span> <span class="c9">more</span></code> &rarr; Add more to a value in a list <small><em>(available since 0.1.3)</em></small></p>
-<p><code><span class="c2">LEXISTS</span> <span class="c9">name</span> <span class="c9">value</span></code> &rarr; Determine if a value is in a certain list <small><em>(available since 0.7.2)</em></small></p>
-<p><code><span class="c2">DCREATE</span> <span class="c9">name</span></code> &rarr; Create a dict with <em>str</em> name <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DADD</span> <span class="c9">name</span> <span class="c9">pair</span></code> &rarr; Add a key-value pair to a dict, <code>pair</code> is a tuple <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DGETALL</span> <span class="c9">name</span></code> &rarr; Return all key-value pairs from a dict <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DGET</span> <span class="c9">name</span> <span class="c9">key</span></code> &rarr; Return the value for a key in a dict <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DKEYS</span> <span class="c9">name</span></code> &rarr; Return all the keys for a dict <small><em>(available since 0.6)</em></small></p>
-<p><code><span class="c2">DVALS</span> <span class="c9">name</span></code> &rarr; Return all the values for a dict <small><em>(available) since 0.6)</em></small></p>
-<p><code><span class="c2">DEXISTS</span> <span class="c9">name</span> <span class="c9">key</span></code> &rarr; Determine if a key exists <small><em>(available since 0.6)</em></small></p>
-<p><code><span class="c2">DREM</span> <span class="c9">name</span></code> &rarr; Remove a dict and all of its pairs <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DPOP</span> <span class="c9">name</span> <span class="c9">key</span></code> &rarr; Remove one key-value in a dict <small><em>(available since 0.2.2)</em></small></p>
-<p><code><span class="c2">DMERGE</span> <span class="c9">name1</span> <span class="c9">name2</span> <span class="c9">name3</span></code> &rarr; Merge <code>name1</code> and <code>name2</code> into a new dict: <code>name3</code> <small><em>(available since 0.7.3)</em></small>
-<p><code><span class="c2">DELDB</span></code> &rarr; Delete everything from the database <small><em>(available since 0.2.1)</em></small></p>
-<p><code><span class="c2">DUMP</span></code> &rarr; Save the database from memory to a file specified in <code>LOAD</code> <small><em>(available since 0.3)</em></small></p>
+<h1>Current Methods</h1>
+<p><code><span class="c2">go</span> <span class="c9">direction</span> <span class="c9">distance</span> </code> &rarr; Move the burtle in a direction of your chosing </p>
+<p><code><span class="c2">look</span> <span class="c9">direction</span> </code> &rarr; Sets the heading of your turtle </p>
+<p><code><span class="c2">l</span> <span class="c9">angle</span> </code> &rarr; Look left </p>
+<p><code><span class="c2">r</span> <span class="c9">angle</span> </code> &rarr; Look right </p>
+<p><code><span class="c2">tp</span> <span class="c9">burtle</span> </code> &rarr; Teleport to another burtle </p>
+<p><code><span class="c2">change_size</span> <span class="c9">int</span> </code> &rarr; 50, halfs the size of your burtle image, -100 doubles it </p>
+<p><code><span class="c2">draw_square</span> <span class="c9">x y size color</span> </code> &rarr; Draws a square, all arguments are optional </p>
+<p><code><span class="c2">draw_grid</span> <span class="c9">list</span> </code> &rarr; Given a 2d list, it will draw a grid </p>
+<p><code><span class="c2">is_hitting</span> <span class="c9">burtle</span> </code> &rarr; Returns true or false depending if its hitting the given burtle </p>
+<p><code><span class="c2">is_clicked</span> <span class="c9">x y</span> </code> &rarr; Return true or false depending if the given x and y are with the burtle's hitbox </p>
+<p><code><span class="c2">change_image</span> <span class="c9">image_path</span> </code> &rarr; Changes the image of your burtle </p>
+<p><code><span class="c2">convert_to_gif</span> <span class="c9">image_path</span> </code> &rarr; Converts the given image into a gif format </p>
 <h1>Suggestions</h1>
-<p>If you would like to suggest a command, you can create an <a href="http://github.com/patx/pickledb/issues">issue on GitHub</a>.</p>
+<p>If you would like to suggest a command, you can create an <a href="https://github.com/alannxq/burtle/issues">issue on GitHub</a>.</p>
 </div>
 </body>
 </html>
