--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img {
 </style>
 </head>
 <body>
-<div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo" class="center"></a></div>
+<div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo"></a></div>
 <div class="body">
 <h1>Current Methods</h1>
 <p><code><span class="c2">l</span> <span class="c9">angle</span> </code> &rarr; Look left </p>
