--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ span.c9 { color: #4E9A06 }
 a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #008000; border-bottom: 0px solid white; }
   
+body {
+  background-color: #282828;
+}  
+
 img {
   max-width:50%;
 }
