--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@ span.c9 { color: #4E9A06 }
 a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #008000; border-bottom: 0px solid white; }
   
+p {
+  color: #FFFFFF;
+}
 body {
-  background-color: #282828;
+  background-color: #1e2122;
 }  
 
 img {
