--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 .logo { width: 800px; margin: 40px auto; }
 .body { font-family: "helvetica"; width: 700px; margin: 40px auto; }
 img.c1 { position: absolute; top: 0; right: 0; border: 0; }
-span.c2 { color: #8F5902 }
-span.c9 { color: #4E9A06 }
+span.c2 { color: #5c33ff }
+span.c9 { color: #33d6ff }
 a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #008000; border-bottom: 0px solid white; }
   
@@ -23,6 +23,10 @@ body {
 
 img {
   max-width:50%;
+}
+  
+h1 {
+  color: #FFFFFF;
 }
  
 .center {
