--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 .logo { width: 800px; margin: 40px auto; }
 .body { font-family: "helvetica"; width: 700px; margin: 40px auto; }
 img.c1 { position: absolute; top: 0; right: 0; border: 0; }
-span.c2 { color: #5c33ff }
-span.c9 { color: #33d6ff }
+span.c2 { color: #80ff9b }
+span.c9 { color: #FFA07A }
 a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #008000; border-bottom: 0px solid white; }
   
@@ -43,6 +43,7 @@ h1 {
 <h1>Current Methods</h1>
 <p><code><span class="c2">l</span> <span class="c9">angle</span> </code> &rarr; Look left </p>
 <p><code><span class="c2">r</span> <span class="c9">angle</span> </code> &rarr; Look right </p>
+<p><code><span class="c2">forward</span> <span class="c9">distance</span> </code> &rarr; move forward </p>
 <p><code><span class="c2">tp</span> <span class="c9">burtle</span> </code> &rarr; Teleport to another burtle </p>
 <p><code><span class="c2">look</span> <span class="c9">direction</span> </code> &rarr; Sets the heading of your turtle </p>
 <p><code><span class="c2">draw_grid</span> <span class="c9">list</span> </code> &rarr; Given a 2d list, it will draw a grid </p>
