--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 img.c1 { position: absolute; top: 0; right: 0; border: 0; }
 span.c2 { color: #80ff9b }
 span.c9 { color: #FFA07A }
-a { color: #008000; border-bottom: 0px dotted white; text-decoration: none; }
-a:hover { color: #008000; border-bottom: 0px solid white; }
+a { color: #80ff9b; border-bottom: 0px dotted white; text-decoration: none; }
+a:hover { color: #80ff9b; border-bottom: 0px solid white; }
   
 p {
   color: #FFFFFF;
