--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@ h1 {
 <body>
 <div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo"></a></div>
 <div class="body">
-<h1>Current Methods</h1>
+<h1>Welcome</h1>
+<p><a href="https://github.com/alannxq/burtle">Burtle</a> is an extended version of turtle which focuses on making games and GUIs easy.</p>
+<h1>Try it out</h1>
+<code>
+<span class="c2">$</span> pip install <span class="c9">burtle</span>
+</code>
+<h1>All Methods</h1>
 <p><code><span class="c2">l</span> <span class="c9">angle</span> </code> &rarr; Look left </p>
 <p><code><span class="c2">r</span> <span class="c9">angle</span> </code> &rarr; Look right </p>
 <p><code><span class="c2">forward</span> <span class="c9">distance</span> </code> &rarr; move forward </p>
