--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@ h1 {
 <div class="body">
 <h1>Welcome</h1>
 <p><a href="https://github.com/alannxq/burtle">Burtle</a> is an extended version of turtle which focuses on making games and GUIs easy.</p>
+<br>
 <h1>Try it out</h1>
 <code>
-<span class="c2">$</span> pip install <span class="c9">burtle</span>
+<span class="c2">$</span> <p>pip install</p> <span class="c9">burtle</span>
 </code>
+<br>
 <h1>All Methods</h1>
 <p><code><span class="c2">l</span> <span class="c9">angle</span> </code> &rarr; Look left </p>
 <p><code><span class="c2">r</span> <span class="c9">angle</span> </code> &rarr; Look right </p>
@@ -60,6 +62,7 @@ h1 {
 <p><code><span class="c2">draw_square</span> <span class="c9">x y size color</span> </code> &rarr; Draws a square, all arguments are optional </p>
 <p><code><span class="c2">is_hitting</span> <span class="c9">burtle</span> </code> &rarr; Returns true or false depending if its hitting the given burtle </p>
 <p><code><span class="c2">is_clicked</span> <span class="c9">x y</span> </code> &rarr; Return true or false depending if the given x and y are with the burtle's hitbox </p>
+<br>
 <h1>Suggestions</h1>
 <p>If you would like to suggest a command, you can create an <a href="https://github.com/alannxq/burtle/issues">issue on GitHub</a>.</p>
 </div>
