--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ img {
 h1 {
   color: #FFFFFF;
 }
+
+code {
+  color: #FFFFFF;
+}
  
 .center {
   display: block;
@@ -45,7 +49,7 @@ h1 {
 <br>
 <h1>Try it out</h1>
 <code>
-<span class="c2">$</span> <p>pip install</p> <span class="c9">burtle</span>
+<span class="c2">$</span> pip install <span class="c9">burtle</span>
 </code>
 <br>
 <h1>All Methods</h1>
