--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ code {
 <div class="body">
 <h1>Welcome</h1>
 <p><a href="https://github.com/alannxq/burtle">Burtle</a> is an extended version of turtle which focuses on making games and GUIs easy.</p>
+  <p>Click <a href="guide/index.html">here</a> for a quick burtle guide.</p>
 <br>
 <h1>Try it out</h1>
 <code>
