--- a/guide/index.html
+++ b/guide/index.html
@@ -13,18 +13,18 @@ span.c2 { color: #80ff9b }
 span.c9 { color: #FFA07A }
 a { color: #80ff9b; border-bottom: 0px dotted white; text-decoration: none; }
 a:hover { color: #80ff9b; border-bottom: 0px solid white; }
-  
+
 p {
   color: #FFFFFF;
 }
 body {
   background-color: #1e2122;
-}  
+}
 
 img {
   max-width:50%;
 }
-  
+
 h1 {
   color: #FFFFFF;
 }
@@ -32,7 +32,7 @@ h1 {
 code {
   color: #FFFFFF;
 }
- 
+
 .center {
   display: block;
   margin-left: auto;
@@ -44,15 +44,48 @@ code {
 <body>
 <div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo"></a></div>
 <div class="body">
+
 <h1>Burtle guide</h1>
 <p>This will be a very simple and small guide for using <a href="https://github.com/alannxq/burtle">Burtle</a>.</p>
 <br>
-<h1>Step 1: import burtle</h1>
+
+
+
+<h1>Step 1: Import burtle</h1>
 <code>
 from burtle import Burtle, BScreen, done
 </code>
 <p>Both "BScreen" and "done" aren't 100% needed, but will make it easier for us later</p>
 <br>
+
+
+<h1>Step 2: Create a burtle!</h1>
+<code>
+ball = Burtle("white_circle")
+</code>
+<p>Your own images go into the brackets after "Burtle", white_circle is a default preset though</p>
+<br>
+
+
+<h1>Step 3: Make it move</h1>
+<code>
+ball.go(up=5)
+</code>
+<p>It's as simple as it seems, simply specify the direction and the amount, animate it by running this in a loop!</p>
+<p>This ".go()" method is one of many which you can find <a href="https://github.com/alannxq/burtle">here</a>, along with descriptions of what they do</p>
+<br>
+
+
+<h1>Step 4: Make the window stay open</h1>
+<code>
+done()
+</code>
+<p>That's it, a simple "done()" will prevent your window from closing</p>
+<br>
+
+
+
+
 </div>
 </body>
 </html>
