--- a/guide/index.html
+++ b/guide/index.html
@@ -55,7 +55,7 @@ code {
 <code>
 from burtle import Burtle, BScreen, done
 </code>
-<p>Both "BScreen" and "done" aren't 100% needed, but will make it easier for us later</p>
+<p>Both "BScreen" and "done" aren't necessary, but they will make it easier for us later</p>
 <br>
 
 
@@ -64,6 +64,7 @@ from burtle import Burtle, BScreen, done
 ball = Burtle("white_circle")
 </code>
 <p>Your own images go into the brackets after "Burtle", white_circle is a default preset though</p>
+<p>Give your burtle a friendly name such as "ball", it will reduce confusion later on</p>
 <br>
 
 
@@ -71,7 +72,7 @@ ball = Burtle("white_circle")
 <code>
 ball.go(up=5)
 </code>
-<p>It's as simple as it seems, simply specify the direction and the amount, animate it by running this in a loop!</p>
+<p>It's as simple as it seems, just specify the direction and the amount. You can animate your burtle by running this command in a loop!</p>
 <p>This ".go()" method is one of many which you can find <a href="https://github.com/alannxq/burtle">here</a>, along with descriptions of what they do</p>
 <br>
 
@@ -81,6 +82,11 @@ ball.go(up=5)
 done()
 </code>
 <p>That's it, a simple "done()" will prevent your window from closing</p>
+<br>
+
+
+<h1>Step 5: Advanced burtle!</h1>
+<p>By clicking on <a href="advanced/index.html">this</a> link, you can learn more advanced ways to use burtle.</p>
 <br>
 
 
