--- a/guide/index.html
+++ b/guide/index.html
@@ -52,35 +52,28 @@ code {
 
 
 <h1>Step 1: Import burtle</h1>
-<code>
-from burtle import Burtle, BScreen, done
-</code>
+<script src="https://gist.github.com/alannxq/f39e06ef0f3a522fdb421c9aec787669.js"></script>
 <p>Both "BScreen" and "done" aren't necessary, but they will make it easier for us later</p>
 <br>
 
 
 <h1>Step 2: Create a burtle!</h1>
-<code>
-ball = Burtle("white_circle")
-</code>
+<script src="https://gist.github.com/alannxq/e6d4925667ced741ae6d03d4c541374b.js"></script>
+  <p>Here we made our own burtle, and we named it "ball."</p>
 <p>Your own images go into the brackets after "Burtle", white_circle is a default preset though</p>
 <p>Give your burtle a friendly name such as "ball", it will reduce confusion later on</p>
 <br>
 
 
 <h1>Step 3: Make it move</h1>
-<code>
-ball.go(up=5)
-</code>
-<p>It's as simple as it seems, just specify the direction and the amount. You can animate your burtle by running this command in a loop!</p>
+<script src="https://gist.github.com/alannxq/9e4f2eef72298b16536e1397abdd9697.js"></script>
+<p>It's as simple as it seems, just specify the direction and the amount you want to move by. You can animate your burtle by running this command in a loop!</p>
 <p>This ".go()" method is one of many which you can find <a href="https://github.com/alannxq/burtle">here</a>, along with descriptions of what they do</p>
 <br>
 
 
 <h1>Step 4: Make the window stay open</h1>
-<code>
-done()
-</code>
+<script src="https://gist.github.com/alannxq/a0ca72cdb844bd45b0f0fcfcc793e328.js"></script>
 <p>That's it, a simple "done()" will prevent your window from closing</p>
 <br>
 
