--- a/guide/advanced/index.html
+++ b/guide/advanced/index.html
@@ -42,7 +42,7 @@ code {
 </style>
 </head>
 <body>
-<div class="logo"><a href="index.html"><img src="white_text_crop.png" alt="Burtle Logo"></a></div>
+<div class="logo"><a href="https://alannxq.github.io/index.html"><img src="white_text_crop.png" alt="Burtle Logo"></a></div>
 <div class="body">
 
 <h1>An advanced Burtle guide</h1>
