--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ $('body').terminal({
                   '. Wellcome to this terminal.');
     }
 }, {
-    greetings: 'My First Web Terminal'
+    greetings: 'Welcome to my portfolio website!\nUse commands such as "cat" or "ls" to view more!'
 });
 </script>
 </body>
