--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 1</a>
+        <a class="nav-link" href="#">About me</a>
       </li>
+    </ul>
+  </div>
+
+</nav>
+<nav class="navbar navbar-expand-sm white justify-content-end">
+
+  <div class="container-fluid">
+    <!-- Links -->
+    <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
+        <a class="nav-link" href="#">About me</a>
       </li>
     </ul>
   </div>
