--- a/index.html
+++ b/index.html
@@ -16,16 +16,9 @@
         <a class="nav-link" href="#">About me</a>
       </li>
     </ul>
-  </div>
-
-</nav>
-<nav class="navbar navbar-expand-sm white justify-content-end">
-
-  <div class="container-fluid">
-    <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">About me</a>
+        <a class="nav-link" href="#">right</a>
       </li>
     </ul>
   </div>
