--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
-                                <span class="button-text">Learn More</span>
+                                <span class="button-text">About Me</span>
                             </button>
                         </div>
                     </li>
