--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         background: transparent;
         padding: 0;
         font-size: inherit;
-        font-family: inherit;
+        font-family: 'JetBrains Mono', monospace;
     }
 
     button.learn-more {
@@ -113,7 +113,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <div id="container">
-                            <button class="learn-more">
+                            <button href="about.html" class="learn-more">
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
