--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <div id="container">
-                            <button href="about.html" class="learn-more">
+                            <button onclick="window.location.href='about.html';" class="learn-more">
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
