--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="container-fluid">
                 <!-- Links -->
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" style="margin-top:2%">
                     <li class="nav-item">
                         <div id="container">
                             <button onclick="window.location.href='about.html';" class="learn-more">
