--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     }
 
     a {
-        color: #696969;
+        color: #0d6efd;
         text-decoration: none;
         border-bottom: none;
     }
