--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 <body>
     <div style="margin-top:10%;" class="text-center">
-        <p style="color: dimgray; ;font-size: 12px; font-family: 'JetBrains Mono', monospace;">It's nice to meet you.<br><br>I'm Alan, a 17 year old cyber security student from England<br><br>I am experienced in Python and I am currently learning Rust<br><br>I am also proficient with most major Linux distributions and<br> have also helped with the creation of a <a href="https://xerolinux.xyz/">Xerolinux</a> edition<br><br><br>I'm an aspiring software engineer,<br>here are some of the fields that interest me:</p>
+        <p style="color: dimgray; ;font-size: 12px; font-family: 'JetBrains Mono', monospace;">It's nice to meet you.<br><br>I'm Alan, a 17 year old cyber security student from England<br><br>I am experienced in Python and I am currently learning Rust<br><br>I am also proficient with most major Linux distributions and<br> have also helped with the creation of a <a href="https://xerolinux.xyz/">Xerolinux</a> edition<br><br><br>I'm an aspiring software engineer,<br>here are some of the fields that I find interesting:</p>
 
         <p style="color: dimgray; ;font-size: 13px; font-family: 'JetBrains Mono', monospace;"><br>- api design and development<br> - software logic<br>- database management</p>
 
