--- a/burtle/index.html
+++ b/burtle/index.html
@@ -69,7 +69,7 @@ code {
 <p><code><span class="c2">is_clicked</span> <span class="c9">x y</span> </code> &rarr; Return true or false depending if the given x and y are with the burtle's hitbox </p>
 <br>
 <h1>Suggestions</h1>
-<p>If you would like to suggest a command, you can create an <a href="https://github.com/alannxq/burtle/issues">issue on GitHub</a>.</p>
+<p>If you have any suggestions, you can create an <a href="https://github.com/alannxq/burtle/issues">issue on GitHub</a>.</p>
 </div>
 </body>
 </html>
